; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_19224.c_usages.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_19224.c_usages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [61 x i8] c"Remote Buffer Overflow exploit v1.2 by _mcp_ <pw@nacs.net>.\0A\00", align 1
@.str.1 = private unnamed_addr constant [66 x i8] c"Win32 Porting and nt sp3 address By Acpizer <acpizer@unseen.org>\0A\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"Usages: \0A\00", align 1
@.str.3 = private unnamed_addr constant [46 x i8] c"%s <target host> <www site> <return address>\0A\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"win98:\0A\00", align 1
@.str.5 = private unnamed_addr constant [39 x i8] c"        <return address> = 0xBFF79243\0A\00", align 1
@.str.6 = private unnamed_addr constant [9 x i8] c"NT SP3:\0A\00", align 1
@.str.7 = private unnamed_addr constant [39 x i8] c"        <return address> = 0x77E53FC7\0A\00", align 1
@.str.8 = private unnamed_addr constant [9 x i8] c"NT SP4:\0A\00", align 1
@.str.9 = private unnamed_addr constant [39 x i8] c"        <return address> = 0x77E9A3A4\0A\00", align 1
@.str.10 = private unnamed_addr constant [61 x i8] c"Will make <target host> running CSMMail download, save, and\0A\00", align 1
@.str.11 = private unnamed_addr constant [41 x i8] c"execute http://<www site>/~pw/owned.exe\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @usages(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.3, i64 0, i64 0), i8* %6)
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.5, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.7, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.8, i64 0, i64 0))
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.9, i64 0, i64 0))
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.10, i64 0, i64 0))
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.11, i64 0, i64 0))
  %16 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
